--- a/rules/custom-rules.html
+++ b/rules/custom-rules.html
@@ -1972,10 +1972,10 @@ This rule helps detect privilege escalation attempts within containerized enviro
 
 <!-- Rule 38 -->
 <div class="rule">
-    <img src="../assets/shell-760x460.jpg" alt="Imagen de Regla 38">
+    <img src="../assets/trap.webp" alt="Imagen de Regla 38">
     <div class="rule-content">
         <div class="rule-summary" onclick="toggleDetail('rule38')">
-            Rule 38: Interactive Terminal Spawned via python [custom]
+            Rule 38: Trap signals execution inside a container [custom]
             <span class="info-icon" onclick="event.stopPropagation()">ℹ
                 <span class="tooltip">Haz clic para desplegar más información</span>
             </span>
@@ -2002,7 +2002,7 @@ This rule helps detect privilege escalation attempts within containerized enviro
             </div>
 
             <div class="sub-section">
-                <strong>Environment:</strong> Staging
+                <strong>Environment:</strong> Incubation
             </div>
             <div class="sub-section">
                 <strong>Rule status:</strong>
@@ -2023,6 +2023,63 @@ This rule helps detect privilege escalation attempts within containerized enviro
         </div>
     </div>
 </div>
+
+
+<!-- Rule 39 -->
+<div class="rule">
+    <img src="../assets/shell-760x460.jpg" alt="Imagen de Regla 39">
+    <div class="rule-content">
+        <div class="rule-summary" onclick="toggleDetail('rule39')">
+            Rule 39: Interactive Terminal Spawned via python [custom]
+            <span class="info-icon" onclick="event.stopPropagation()">ℹ
+                <span class="tooltip">Haz clic para desplegar más información</span>
+            </span>
+        </div>
+        <div class="rule-detail" id="rule39">
+            <div class="sub-section" onclick="toggleSubDetail('desc39')">
+                Description 
+                <span class="info-icon" onclick="event.stopPropagation()">ℹ
+                    <span class="tooltip">Haz clic para desplegar más información</span>
+                </span>
+            </div>
+            <div class="sub-detail" id="desc39">
+                Under construction.
+            </div>
+
+            <div class="sub-section" onclick="toggleSubDetail('pertinencia39')">
+                Relevance
+                <span class="info-icon" onclick="event.stopPropagation()">ℹ
+                    <span class="tooltip">Haz clic para desplegar más información</span>
+                </span>
+            </div>
+            <div class="sub-detail" id="pertinencia39">
+                Under construction.
+            </div>
+
+            <div class="sub-section">
+                <strong>Environment:</strong> Incubation
+            </div>
+            <div class="sub-section">
+                <strong>Rule status:</strong>
+                <div class="progress">
+                    <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" 
+                         aria-valuenow="85" aria-valuemin="0" aria-valuemax="100" style="width: 50%;">
+                        50%
+                    </div>
+                </div>
+            </div>
+            <div class="sub-section">
+                <strong>Tags:</strong>
+                <span class="badge bg-secondary me-2">host</span>
+                <span class="badge bg-secondary">container</span>
+                <span class="badge me-2" style="background-color: #17a2b8; color: white;">shell</span>
+                <span class="badge me-2" style="background-color: #fd7e14; color: white;">mitre_execution</span>
+            </div>
+        </div>
+    </div>
+</div>
+
+
 
 
 </body>
