community rules text

--- a/rules/community-rules.html
+++ b/rules/community-rules.html
@@ -102,8 +102,8 @@
 
   <!-- Content Section -->
   <div class="container mt-5">
-    <h1>Welcome to community-rules</h1>
-    <p>This is a simple landing page template with a responsive navbar using Bootstrap 5.</p>
+    <h1>Welcome to Community Rules</h1>
+    <p>Below is the list of community rules contributed by the Falco runtime security community. While these rules may not be the most precise, they help enhance detection coverage in certain critical scenarios where official rules from the vendor are not yet available.</p>
 
     <!-- List of Items -->
     <h2>Security Alerts</h2>
