Falco MITRE-MELI Rule Matrix v0.33.1

--- a/metrics/security-coverage.html
+++ b/metrics/security-coverage.html
@@ -107,7 +107,7 @@
 
     <!-- MITRE Table -->
     <div id="mitreTable" class="mt-4" style="display: none;">
-      <h2>Falco MITRE Rule Matrix</h2>
+      <h2>Falco MITRE-MELI Rule Matrix v0.33.1</h2>
       <table>
           <thead>
               <tr>
@@ -234,7 +234,9 @@
               </tr>
           </tbody>
       </table>
-      <p>To learn more about Falco, visit the <a href="https://falco.org/">homepage</a> or get started on <a href="https://github.com/falcosecurity/falco">GitHub</a>!</p>
+
+      <br>
+      <p><i>Falco MITRE-MELI Rule Matrix v0.33.1 is based on the <a href="https://sysdig.com/blog/mitre-attck-framework-for-container-runtime-security-with-sysdig-falco/" target="_blank">original MITRE Falco matrix from 2019</a> (8 tactics) and the <a href="https://www.aquasec.com/blog/mitre-attack-framework-for-containers/" target="_blank">Aqua Security version from 2021</a> (9 tactics) for Falco 0.33 deployed at MELI. The matrix will include 12 tactics, excluding Reconnaissance and Resource Development for now. (Sysdig uses the enterprise version of MITRE.)</i></p>
     </div>
 
     <h3>Security coverage based on detection surface</h3>
