--- a/rules/custom-rules.html
+++ b/rules/custom-rules.html
@@ -1759,7 +1759,7 @@ This rule helps detect privilege escalation attempts within containerized enviro
     <img src="../assets/memory_swap.jpeg" alt="Imagen de Regla 34">
     <div class="rule-content">
         <div class="rule-summary" onclick="toggleDetail('rule34')">
-            Rule 34: Memory Swap modification [custom]
+            Rule 34: Memory Swap modification inside a container [custom]
             <span class="info-icon" onclick="event.stopPropagation()">ℹ
                 <span class="tooltip">Haz clic para desplegar más información</span>
             </span>
