--- a/rules/vendor-rules.html
+++ b/rules/vendor-rules.html
@@ -102,7 +102,7 @@
 
   <!-- Content Section -->
   <div class="container mt-5">
-    <h1>Welcome to vendor-rules</h1>
+    <h1>Welcome to Vendor Rules</h1>
     <p>This is a simple landing page template with a responsive navbar using Bootstrap 5.</p>
 
     <!-- List of Items -->
