Security coverage based on detection surface

--- a/metrics/security-coverage.html
+++ b/metrics/security-coverage.html
@@ -98,6 +98,7 @@
         <!-- Indicador de métrica -->
         <div class="mt-5">
           <h3>Security coverage based on MITRE tactics</h3>
+          <p>Loren Ipsum</p>
           <div class="metric-label">91.66%</div>
         </div>
 
@@ -244,7 +245,8 @@
     </div>
 
     <h3>Security coverage based on detection surface</h3>
-    <p>Esta es una sección donde puedes agregar una tabla o cualquier otro contenido.</p>
+    <p>Allie Mellen describes the "<a href="https://www.forrester.com/blogs/introducing-detection-surface-the-cybersecurity-defense-that-parallels-attack-surface/" target="_blank">detection surface</a>," which, according to Forrester, is "the type of IT asset where attacker activity is detected."</p>
+      <p>The selected surfaces include: filesystem, database, shell, container, users, network, and processes.</p>
 
     <div class="container my-5">
       <h2 class="text-center">Rules Coverage</h2>
