based on MITRE tactics label

--- a/metrics/security-coverage.html
+++ b/metrics/security-coverage.html
@@ -98,7 +98,7 @@
         <!-- Indicador de métrica -->
         <div class="mt-5">
           <h3>Security coverage based on MITRE tactics</h3>
-          <p>Loren Ipsum</p>
+          <p>Falco provides rules specifically designed to detect suspicious security behaviors in Kubernetes, Linux, and the cloud. This indicator is based on the total number of MITRE tactics covered by Falco rules. It is important to note that it is based on the MITRE Enterprise framework, with 12 relevant tactical categories selected.</p>
           <div class="metric-label">91.66%</div>
         </div>
 
