effectiveness behavior knowledge based

--- a/index.html
+++ b/index.html
@@ -125,6 +125,7 @@
               <li><a class="dropdown-item" href="metrics/security-coverage.html">Security Coverage</a></li>
               <li><a class="dropdown-item" href="metrics/maturity.html">Maturity</a></li>
               <li><a class="dropdown-item" href="metrics/effectiveness.html">Effectiveness</a></li>
+              <li><a class="dropdown-item" href="metrics/accurate-rules.html">Most Accurate Rules</a></li>
             </ul>
           </li>
           <li class="nav-item dropdown">
