--- a/metrics/security-coverage.html
+++ b/metrics/security-coverage.html
@@ -106,6 +106,11 @@
     <div class="mt-4 text-center">
       <button id="toggleButton" class="btn btn-primary">Show MITRE Table</button>
     </div>
+    <div class="label">
+      <span><b>Target 2025:</b></span>
+      <p>The main objective is to address all the tactical categories defined by MITRE to achieve 100% tactical coverage.</p>
+      <p>Address the tactical categories with the fewest rules or those that are most critical in terms of cloud cybersecurity risks..</p>
+    </div>
 
     <!-- MITRE Table -->
     <div id="mitreTable" class="mt-4" style="display: none;">
@@ -244,6 +249,9 @@
       <p><i>Falco MITRE-MELI Rule Matrix v0.33.1 is based on the <a href="https://sysdig.com/blog/mitre-attck-framework-for-container-runtime-security-with-sysdig-falco/" target="_blank">original MITRE Falco matrix from 2019</a> (8 tactics) and the <a href="https://www.aquasec.com/blog/mitre-attack-framework-for-containers/" target="_blank">Aqua Security version from 2021</a> (9 tactics) for Falco 0.33 deployed at MELI. The matrix will include 12 tactics, excluding Reconnaissance and Resource Development for now. (Sysdig uses the enterprise version of MITRE.)</i></p>
     </div>
 
+    <br>
+    <br>
+
     <h3>Security coverage based on detection surface</h3>
     <p>Allie Mellen describes the "<a href="https://www.forrester.com/blogs/introducing-detection-surface-the-cybersecurity-defense-that-parallels-attack-surface/" target="_blank">detection surface</a>," which, according to Forrester, is "the type of IT asset where attacker activity is detected."</p>
       <p>The selected surfaces include: filesystem, database, shell, container, users, network, and processes.</p>
@@ -253,9 +261,13 @@
       
       <!-- Botón para mostrar/ocultar la tabla -->
       <div class="mt-4 text-center">
-        <button id="toggleCoverageButton" class="btn btn-primary">Coverage Based Detection Surface</button>
+        <button id="toggleCoverageButton" class="btn btn-primary">View Detection Surface Table</button>
       </div>
-
+      <div class="label">
+        <span><b>Target 2025:</b></span>
+        <p>Achieve incorporating at least 3 rules per detection surface.</p>
+        <p>Try to ensure that no detection surface is below 10%.</p>
+      </div>
       
       <!-- Tabla Rules Coverage -->
       <div id="rulesCoverageTable" class="table-responsive" style="display: none;">
@@ -271,12 +283,12 @@
             <tr>
               <td>filesystem</td>
               <td>12</td>
-              <td>31.58%</td>
+              <td>39.47%</td>
             </tr>
             <tr>
               <td>database</td>
               <td>1</td>
-              <td>2.63%</td>
+              <td>10.53%</td>
             </tr>
             <tr>
               <td>shell</td>
@@ -286,7 +298,7 @@
             <tr>
               <td>container</td>
               <td>8</td>
-              <td>21.05%</td>
+              <td>31.58%</td>
             </tr>
             <tr>
               <td>users</td>
@@ -296,12 +308,12 @@
             <tr>
               <td>network</td>
               <td>8</td>
-              <td>21.05%</td>
+              <td>42.11%</td>
             </tr>
             <tr>
               <td>process</td>
               <td>5</td>
-              <td>13.16%</td>
+              <td>47.37%</td>
             </tr>
           </tbody>
         </table>
@@ -355,7 +367,7 @@
       labels: ['filesystem', 'database', 'shell', 'container', 'users', 'network', 'process'], // Labels from the table
       datasets: [{
         label: 'Coverage (%)',
-        data: [31.58, 2.63, 2.63, 21.05, 7.89, 21.05, 13.16], // Coverage values from the table
+        data: [39.47, 10.53, 2.63, 31.58, 7.89, 42.11, 47.37], // Coverage values from the table
         backgroundColor: 'rgba(117, 182, 182, 0.5)', // Color de fondo uniforme
         borderColor: '#75b6b6', // Color del borde uniforme
         borderWidth: 2
