--- a/metrics/effectiveness.html
+++ b/metrics/effectiveness.html
@@ -162,7 +162,7 @@ footer {
       <h1></h1>
       <div class="button-container">
         <button class="btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target="#rulesTable" aria-expanded="false" aria-controls="rulesTable">
-          View effectiveness metrics
+          View most accurate rules table
         </button>
       </div>
   
