--- a/metrics/effectiveness.html
+++ b/metrics/effectiveness.html
@@ -392,7 +392,38 @@ footer {
   <div class="container mt-5">
     <h2>Rules Effectiveness Evaluation</h2>
     <p>Falco rules enable real-time monitoring and detection of anomalous or suspicious behaviors based on a predefined set of conditions. Evaluating the effectiveness of these rules not only ensures their proper configuration but also helps optimize security coverage by identifying gaps (bypasses) in detection.</p>
+  
+    <h3>Rules Effectiveness Evaluation (Scenarios)</h3>
+    <p>In this case, we are working with a total of 69 rules, divided as follows:</p>
+    <ul>
+      <li>38 vendor rules (preconfigured by the provider).</li>
+      <li>31 custom rules (tailored to the specific environment).</li>
+    </ul>
+    <p>A thorough analysis has been conducted based on the ability of the rules to detect specific behaviors by replicating conditions associated with each one. The results are as follows:</p>
+    <ul>
+      <li>31 custom rules are fully effective as they successfully detect the configured behaviors.</li>
+      <li>Out of the 38 vendor rules, only 30 are effective, while the remaining 8 fail to detect replicated behaviors.</li>
+    </ul>
+  
+    <h2>Evaluation Methodology</h2>
+    <p>The effectiveness of each rule was assessed using a behavior-based approach:</p>
+    <ul>
+      <li><strong>Understanding the rule:</strong> Comprehend the activity the rule aims to detect (e.g., unauthorized socket creation, container escape attempts, or modifications to critical files).</li>
+      <li><strong>Behavior replication:</strong> Simulate the conditions the rule is designed to detect, ensuring these correspond to real or potential attack scenarios.</li>
+      <li><strong>Validation:</strong> Observe whether Falco generates alerts when replicating the behavior. This helps determine whether the rule is effective or requires adjustments.</li>
+    </ul>
+
+
+        <!-- Si la grafica se ve muy pequeña puede salir del contenedor para que ocupe todo el ancho -->
+
+        <div style="width: 60%; margin: auto;">
+          <canvas id="falcoEffectivenessChart"></canvas>
+        </div>
+
+  
   </div>
+
+  
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
@@ -509,6 +540,71 @@ footer {
       const rulesContainer = document.getElementById('rulesContainer');
       rulesContainer.style.display = rulesContainer.style.display === 'none' || !rulesContainer.style.display ? 'block' : 'none';
     }
+</script>
+
+<script>
+  const ctx = document.getElementById('falcoEffectivenessChart').getContext('2d');
+
+  const data = {
+    labels: ['Vendor', 'Custom'],
+    datasets: [
+      {
+        label: 'Probadas (Detectadas)',
+        data: [30, 31], // Vendor probadas, Custom probadas
+        backgroundColor: 'rgba(75, 192, 192, 0.7)', // Color verde
+        borderColor: 'rgba(75, 192, 192, 1)',
+        borderWidth: 1,
+      },
+      {
+        label: 'No probadas (No Detectadas)',
+        data: [8, 0], // Vendor no probadas, Custom no probadas
+        backgroundColor: 'rgba(255, 99, 132, 0.7)', // Color rojo
+        borderColor: 'rgba(255, 99, 132, 1)',
+        borderWidth: 1,
+      },
+    ],
+  };
+
+  const options = {
+    plugins: {
+      title: {
+        display: true,
+        text: 'Efectividad de Reglas Falco',
+        font: { size: 18 },
+      },
+      tooltip: {
+        callbacks: {
+          label: function(tooltipItem) {
+            return `${tooltipItem.dataset.label}: ${tooltipItem.raw}`;
+          },
+        },
+      },
+    },
+    responsive: true,
+    scales: {
+      x: {
+        stacked: true,
+        title: {
+          display: true,
+          text: 'Tipos de Reglas',
+        },
+      },
+      y: {
+        stacked: true,
+        beginAtZero: true,
+        title: {
+          display: true,
+          text: 'Cantidad de Reglas',
+        },
+      },
+    },
+  };
+
+  new Chart(ctx, {
+    type: 'bar',
+    data: data,
+    options: options,
+  });
 </script>
 
 </body>
